[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameComponents/GameBalls/game_ball.gd" type="Script" id=1]
[ext_resource path="res://Assets/GameComponents/GameBalls/BasicBall/art/basic_ball.png" type="Texture" id=2]
[ext_resource path="res://Assets/GameComponents/GameBalls/audio/basic_ball_bounce.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/GameComponents/GameBalls/art/ball-explosion.png" type="Texture" id=4]
[ext_resource path="res://Assets/GameComponents/GameBalls/BasicBall/art/basic_ball_exploding.png" type="Texture" id=5]
[ext_resource path="res://Assets/GameComponents/GameBalls/audio/explosion.ogg" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=6]
resource_local_to_scene = true
bounce = 0.3

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 25.0

[sub_resource type="CircleShape2D" id=5]
resource_local_to_scene = true
radius = 26.0

[sub_resource type="Animation" id=7]
resource_name = "Explode"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Despawn:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Despawn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExplosionSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DespawnSound:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Despawn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="BasicBall" type="RigidBody2D"]
collision_layer = 4
collision_mask = 7
mass = 1.25
physics_material_override = SubResource( 6 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 1, 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="ExplosionSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -2, 1.19209e-07 )
rotation = 0.0029794
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
vframes = 5
frame = 4

[node name="Despawn" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 1 )
rotation = 0.0029794
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 7 )
anims/Idle = SubResource( 8 )

[node name="DespawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Sound"
